.deploy/traefik/k8s-dshbrd/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: web.traefik.k8s
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
